[tool.poetry]
name = "sentential"
version = "0.6.0"
description = "because lambdas are good"
authors = [
  "Brendan Keane <btkeane@gmail.com>",
  "Raymond Douglas <r@rymnd.org>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
boto3 = "^1.24.31"
python-on-whales = "^0.55.0"
pydantic = "^1.9.1"
Jinja2 = "^3.1.2"
tabulate = "^0.8.10"
flaky = "^3.7.0"
rich = "^12.5.1"
semantic-version = "^2.10.0"
types-boto3 = "^1.0.2"
furl = "^2.1.3"
polars = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
python-semantic-release = "^7.31.2"

[tool.poetry.group.dev.dependencies]
moto = { git = "https://github.com/bkeane/moto", branch = "enableECRImageManifestMediaType" }
pytest-env = "^0.8.1"
requests-mock = "^1.10.0"
docker = "^6.0.1" # remove once back to regular moto branch

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sntl = "sentential.sntl:main"

[tool.semantic_release]
version_variable = [
  "sentential/__init__.py:__version__",
  "pyproject.toml:version",
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "--no-flaky-report"
env = [
    "SENTENTIAL_ENV=test",
    "MOTO_LAMBDA_STUB_ECR=false"
]